# cpp

./: .gitignore
reduc/: CMakeLists.txt  main.cpp
